// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Card should support margin space props 1`] = `
.c2 > .c0 {
  padding: 24px;
  color: pink;
}

.c2 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

.c1 {
  box-sizing: border-box;
  margin: 4px;
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  border-radius: 8px;
  padding: 16px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c1:hover {
  box-shadow: 0px 9px 24px hsla(200,96%,35%,0.3);
}

.c1 > .c0 {
  padding: 24px;
  color: pink;
}

.c1 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

<div>
  <div
    class="c0 c1"
  >
    Content
  </div>
</div>
`;

exports[`component: Card snapshot 1`] = `
.c1 {
  box-sizing: border-box;
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  border-radius: 8px;
  padding: 16px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c1:hover {
  box-shadow: 0px 9px 24px hsla(200,96%,35%,0.3);
}

.c1 > .c0 {
  padding: 24px;
  color: pink;
}

.c1 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

<div>
  <div
    class="c0 c1"
  />
</div>
`;

exports[`component: Card with theme customization should have 1px border radius 1`] = `
<DocumentFragment>
  .c2 > .c0 {
  padding: 24px;
  color: pink;
}

.c2 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

.c3 > .c0 {
  padding: 24px;
  color: pink;
}

.c3 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

.c4 > .c0 {
  padding: 24px;
  color: pink;
}

.c4 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

.c5 > .c0 {
  padding: 24px;
  color: pink;
}

.c5 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

.c1 {
  box-sizing: border-box;
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  border-radius: 1px;
  padding: 16px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c1:hover {
  box-shadow: 0px 9px 24px hsla(200,96%,35%,0.3);
}

.c1 > .c0 {
  padding: 24px;
  color: pink;
}

.c1 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

<div
    class="c0 c1"
  />
</DocumentFragment>
`;

exports[`component: Card with theme customization should have 4px border radius 1`] = `
<DocumentFragment>
  .c2 > .c0 {
  padding: 24px;
  color: pink;
}

.c2 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

.c3 > .c0 {
  padding: 24px;
  color: pink;
}

.c3 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

.c4 > .c0 {
  padding: 24px;
  color: pink;
}

.c4 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

.c1 {
  box-sizing: border-box;
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  border-radius: 4px;
  padding: 16px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c1:hover {
  box-shadow: 0px 9px 24px hsla(200,96%,35%,0.3);
}

.c1 > .c0 {
  padding: 24px;
  color: pink;
}

.c1 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

<div
    class="c0 c1"
  />
</DocumentFragment>
`;

exports[`component: Card with theme customization should have no box shadow & 2px borders 1`] = `
<DocumentFragment>
  .c2 > .c0 {
  padding: 24px;
  color: pink;
}

.c2 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

.c3 > .c0 {
  padding: 24px;
  color: pink;
}

.c3 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

.c1 {
  box-sizing: border-box;
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  border-radius: 8px;
  padding: 16px;
  border: 2px solid;
  border-color: hsl(200,29%,90%);
}

.c1 > .c0 {
  padding: 24px;
  color: pink;
}

.c1 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

<div
    class="c0 c1"
  />
</DocumentFragment>
`;
